// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload renders correctly 1`] = `
<label class="vd-file-upload d-block pa-4 primary--text" style="width: 100%;"><input type="file" accept=".pdf,.jpg,.jpeg,.png" class="vd-file-upload-input"> <span class="vd-file-upload-placeholder"><vicon-stub size="40" color="primary">
					M11 20H6.5Q4.22 20 2.61 18.43 1 16.85 1 14.58 1 12.63 2.17 11.1 3.35 9.57 5.25 9.15 5.88 6.85 7.75 5.43 9.63 4 12 4 14.93 4 16.96 6.04 19 8.07 19 11 20.73 11.2 21.86 12.5 23 13.78 23 15.5 23 17.38 21.69 18.69 20.38 20 18.5 20H13V12.85L14.6 14.4L16 13L12 9L8 13L9.4 14.4L11 12.85Z
				</vicon-stub> <span class="mt-1 font-weight-medium black--text">
					Placez votre fichier ici
				</span> <span class="mb-2 grey--text">
					Ou
				</span> <span class="vd-file-upload-btn primary white--text text-uppercase py-2 px-4 elevation-2">
					Choisir un fichier
				</span> <span class="mt-4 text-body-2 font-weight-regular grey--text">
					Taille max. : 10 Mo. Formats acceptés : PDF, JPG, JPEG, PNG
				</span></span></label>
`;

exports[`FileUpload renders correctly with only one extension allowed 1`] = `
<label class="vd-file-upload d-block pa-4 primary--text" style="width: 100%;"><input type="file" accept=".pdf" class="vd-file-upload-input"> <span class="vd-file-upload-placeholder"><vicon-stub size="40" color="primary">
					M11 20H6.5Q4.22 20 2.61 18.43 1 16.85 1 14.58 1 12.63 2.17 11.1 3.35 9.57 5.25 9.15 5.88 6.85 7.75 5.43 9.63 4 12 4 14.93 4 16.96 6.04 19 8.07 19 11 20.73 11.2 21.86 12.5 23 13.78 23 15.5 23 17.38 21.69 18.69 20.38 20 18.5 20H13V12.85L14.6 14.4L16 13L12 9L8 13L9.4 14.4L11 12.85Z
				</vicon-stub> <span class="mt-1 font-weight-medium black--text">
					Placez votre fichier ici
				</span> <span class="mb-2 grey--text">
					Ou
				</span> <span class="vd-file-upload-btn primary white--text text-uppercase py-2 px-4 elevation-2">
					Choisir un fichier
				</span> <span class="mt-4 text-body-2 font-weight-regular grey--text">
					Taille max. : 10 Mo. Format accepté : PDF
				</span></span></label>
`;
